flask-app-config/architecture/security_groups.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-041f9fdae8f330960",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-048398586e31d895e",
      "SecurityGroupArn": "arn:aws:ec2:us-east-1:180116291619:security-group/sg-041f9fdae8f330960",
      "OwnerId": "180116291619",
      "GroupName": "flask-app-sg",
      "Description": "Security group for Flask app ECS tasks",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 8000,
          "ToPort": 8000,
          "UserIdGroupPairs": [
            {
              "UserId": "180116291619",
              "GroupId": "sg-05cc663bffbf71966"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ]
}
